update be helm chart to commit d2b7f3ee4cacbfd5cf316d5c8212509667242c73

--- a/prod/feedback-backend-values.yaml
+++ b/prod/feedback-backend-values.yaml
@@ -2,3 +2,5 @@ image:
   tag: 3fa106fca2bf1351483e1e6384f409068c2c5521
 image:
   tag: f6ce7e14812d3f3e02817dc821f0ebd779d9397c
+image:
+  tag: d2b7f3ee4cacbfd5cf316d5c8212509667242c73
