update be helm chart to commit 57ac70a75ba8ae9077ddb93fbba97ae4e507277c

--- a/prod/feedback-backend-values.yaml
+++ b/prod/feedback-backend-values.yaml
@@ -4,3 +4,5 @@ image:
   tag: f6ce7e14812d3f3e02817dc821f0ebd779d9397c
 image:
   tag: d2b7f3ee4cacbfd5cf316d5c8212509667242c73
+image:
+  tag: 57ac70a75ba8ae9077ddb93fbba97ae4e507277c
